# image_processing_kuda

./: .gitmodules  CMakeLists.txt  const.h  main.cpp
include/: align.cpp  align.h  alignface.cpp  alignface.h  cropandalign.cpp  cropandalign.h  estimation.cpp  estimation.h  normcrop.cpp  normcrop.h  resizer.cpp  resizer.h  scale.cpp  scale.h  transform.cpp  transform.h  validation.cpp  validation.h  writeimage.cpp  writeimage.h
sample_images/: Richard_Pryor_The_Midnight_Show_in_April_1974.txt  beauty-woman-face-13425892.txt  czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcm0zMjgtMzY2LXRvbmctMDhfMS5qcGc.txt  happy-woman-fashion-model-smiling-cute-girl-face-facial-treatment-cosmetology-concept-happy-woman-fashion-model-smiling-cute-139081098.txt  istockphoto-1332338460-612x612.txt  istockphoto-1344963248-612x612.txt  istockphoto-1618294960-612x612.txt  pexels-photo-2379005.txt  premium_photo-1664203068007-52240d0ca48f.txt  premium_photo-1668895511243-1696733f4fcb.txt  skindeep-holiday-25.txt
